--- a/src/index.css
+++ b/src/index.css
@@ -27,40 +27,10 @@
   }
 
   .mobileMenu {
-    @apply absolute top-[80px] -left-full h-[calc(100vh-80px)] w-full  flex-col bg-gray-200 opacity-0;
+    @apply absolute top-[80px] -left-full h-[calc(100vh-80px)] w-full  flex-col bg-primary-100 opacity-0;
   }
   .desktopMenu {
     @apply relative top-0 h-auto flex-row space-x-4 opacity-100;
-  }
-
-  .card {
-    @apply mb-5 block  rounded-lg border border-gray-200 bg-blue-100 shadow-md;
-  }
-
-  .primary-button {
-    @apply rounded bg-amber-300 py-2 px-4 shadow outline-none hover:bg-amber-400 active:bg-amber-500;
-  }
-
-  .default-button {
-    @apply rounded bg-gray-200 py-2 px-4 text-black shadow outline-none hover:bg-gray-300 active:bg-gray-400;
-  }
-
-  input,
-  select,
-  textarea {
-    @apply rounded border p-2 outline-none;
-  }
-
-  .dropdown-link {
-    @apply flex p-2 hover:bg-gray-200;
-  }
-
-  .alert-error {
-    @apply my-3 rounded-lg bg-pink-100 p-3 text-red-700;
-  }
-
-  .alert-success {
-    @apply my-3 rounded-lg bg-green-100 p-3 text-green-700;
   }
 
   /* Scroll */
@@ -131,5 +101,17 @@
 
   .FormGroup {
     @apply mx-4 mt-0 mb-5 rounded border-none bg-transparent p-0;
+  }
+
+  .tooltip {
+    @apply relative inline-block cursor-pointer;
+  }
+
+  .tooltip .tooltiptext {
+    @apply invisible absolute bottom-full z-10 w-full rounded-lg bg-secondary-400 px-4 py-2 text-center text-gray-500 opacity-0 transition-opacity duration-500;
+  }
+
+  .tooltip:hover .tooltiptext {
+    @apply visible opacity-100;
   }
 }
